--- a/6.4 Motivation Meme Project/style.css
+++ b/6.4 Motivation Meme Project/style.css
@@ -12,13 +12,14 @@ h1 {
 .poster {
     width: 50%;
     margin-left: 25%;
+    margin-top: 100px;
     color: white;
     font-family: "Libre Baskerville", serif;
     text-align: center;
 }
 
 .motivation-img {
-    border: 5px solid white;
-    width: 50%;
+    border: 10px solid white;
+    width: 100%;
 }
 
